# Belief-SG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: agent.h  game.h  random_agent.h  referee.h  stratego.h
include/Belief-SG/agents/: determinized_mc.h  determinized_uct.h  random_agent.h
include/Belief-SG/core/: action.h  agent.h  game.h  manager.h  move.h  piece_attribute.h  piece_domain.h  piece_type.h  piece_value.h  play_graph.h  player_id.h  point_of_view.h  position.h  prob_transition.h  state.h  variable.h
include/Belief-SG/core/moves/: assign_piece_value.h  move_piece.h  remove_piece.h  remove_piece_value.h  remove_piece_values.h  reveal.h  set_next_player.h  set_next_players.h  set_observers.h  set_variable.h  shuffle.h
include/Belief-SG/games/: agram.h  cuckoo.h  goofspiel.h  kuhn_poker.h  mini_stratego.h
src/: game.cc  main.cc  random_agent.cc  referee.cc  stratego.cc
src/agents/: determinized_mc.cpp  determinized_uct.cpp  random_agent.cpp
src/core/: action.cpp  game.cpp  manager.cpp  move.cpp  piece_attribute.cpp  piece_domain.cpp  piece_type.cpp  piece_value.cpp  play_graph.cpp  point_of_view.cpp  position.cpp  state.cpp  variable.cpp
src/core/moves/: assign_piece_value.cpp  move_piece.cpp  remove_piece.cpp  remove_piece_value.cpp  remove_piece_values.cpp  reveal.cpp  set_next_player.cpp  set_next_players.cpp  set_observers.cpp  set_variable.cpp  shuffle.cpp
src/games/: agram.cpp  cuckoo.cpp  goofspiel.cpp  kuhn_poker.cpp  mini_stratego.cpp
